--- a/raise.css
+++ b/raise.css
@@ -3235,3 +3235,7 @@ body#staff .thin > div:nth-of-type(2) h3 {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.07);
 }
+
+.username{
+  text-transform: initial;
+}
